// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Change Mining Fees should render with custom props 1`] = `
<SceneWrapper
  background="body"
  hasTabs={false}
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "padding": 28.091549295774648,
      }
    }
  >
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                null,
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              High
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                null,
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              Standard
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                null,
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              Low
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "marginTop": 18,
        }
      }
    >
      <PrimaryButton
        onPress={[Function]}
      >
        <Text>
          Set Custom Mining Fee
        </Text>
      </PrimaryButton>
    </View>
  </View>
</SceneWrapper>
`;

exports[`Change Mining Fees should render with high props 1`] = `
<SceneWrapper
  background="body"
  hasTabs={false}
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "padding": 28.091549295774648,
      }
    }
  >
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                Object {
                  "backgroundColor": "#0073D9",
                  "borderColor": "#0073D9",
                },
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              High
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                null,
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              Standard
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                null,
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              Low
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "marginTop": 18,
        }
      }
    >
      <PrimaryButton
        onPress={[Function]}
      >
        <Text>
          Set Custom Mining Fee
        </Text>
      </PrimaryButton>
    </View>
  </View>
</SceneWrapper>
`;

exports[`Change Mining Fees should render with low props 1`] = `
<SceneWrapper
  background="body"
  hasTabs={false}
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "padding": 28.091549295774648,
      }
    }
  >
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                null,
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              High
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                null,
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              Standard
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                Object {
                  "backgroundColor": "#0073D9",
                  "borderColor": "#0073D9",
                },
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              Low
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "marginTop": 18,
        }
      }
    >
      <PrimaryButton
        onPress={[Function]}
      >
        <Text>
          Set Custom Mining Fee
        </Text>
      </PrimaryButton>
    </View>
  </View>
</SceneWrapper>
`;

exports[`Change Mining Fees should render with standard props 1`] = `
<SceneWrapper
  background="body"
  hasTabs={false}
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "padding": 28.091549295774648,
      }
    }
  >
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                null,
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              High
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                Object {
                  "backgroundColor": "#0073D9",
                  "borderColor": "#0073D9",
                },
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              Standard
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "height": 61.80140845070423,
        }
      }
    >
      <TouchableWithoutFeedback
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingTop": 14.045774647887324,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#87939E",
                  "borderRadius": 12.64119718309859,
                  "borderWidth": 1.4045774647887324,
                  "height": 25.28239436619718,
                  "width": 25.28239436619718,
                },
                null,
              ]
            }
          />
          <View>
            <FormattedText
              style={
                Object {
                  "color": "#4A5157",
                  "fontSize": 22.473239436619718,
                  "lineHeight": 22.473239436619718,
                  "paddingLeft": 14.045774647887324,
                }
              }
            >
              Low
            </FormattedText>
          </View>
        </View>
      </TouchableWithoutFeedback>
    </View>
    <View
      style={
        Object {
          "marginTop": 18,
        }
      }
    >
      <PrimaryButton
        onPress={[Function]}
      >
        <Text>
          Set Custom Mining Fee
        </Text>
      </PrimaryButton>
    </View>
  </View>
</SceneWrapper>
`;
